--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "wepyx",
   "version": "1.1.1",
-  "description":
-    "wepyx is a lightweight front-end framework based on redux, redux-actions.(Inspired by [dva](https://github.com/dvajs/dva) and [vuex](https://github.com/vuejs/vuex))",
+  "description": "wepyx is a lightweight front-end framework based on redux, redux-actions.(Inspired by [dva](https://github.com/dvajs/dva) and [vuex](https://github.com/vuejs/vuex))",
   "repository": "https://github.com/tolerance-go/wepyx",
   "main": "lib/index.js",
   "author": "bzone <yarnbCoder@gmail.com>",
@@ -21,7 +20,10 @@
     "registry": "http://registry.npmjs.org/"
   },
   "jest": {
-    "testPathIgnorePatterns": ["/node_modules/", "/examples/"]
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/examples/"
+    ]
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -32,8 +34,6 @@
     "babel-preset-react": "^6.24.1",
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.3",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^3.18.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^7.1.0",
@@ -41,6 +41,7 @@
     "eslint-plugin-standard": "^2.0.1",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
+    "lodash.clone": "^4.5.0",
     "prettier": "^1.11.1",
     "react-dom": "^16.3.1",
     "rimraf": "^2.6.2"
