--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "wepyx",
-  "version": "1.5.0",
-  "description": "wepyx is a lightweight front-end framework based on redux, redux-actions.(Inspired by [dva](https://github.com/dvajs/dva) and [vuex](https://github.com/vuejs/vuex))",
-  "repository": "https://github.com/tolerance-go/wepyx",
-  "main": "lib/index.js",
+  "private": true,
   "author": "bzone <yarnbCoder@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "node ./scripts/build.js",
+    "publish": "./scripts/publish.js",
+    "bootstrap": "lerna bootstrap",
     "rg": "node scripts/replace.js",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "test": "jest --coverage ",
-    "build": "cross-env NODE_ENV=production babel src -d lib",
-    "build:watch": "cross-env NODE_ENV=production babel src -d lib -w",
     "precommit": "npm run format && npm run lint",
-    "format": "prettier --write '{{src,__test__}/**/*.{js,less},*.js}'",
+    "format": "prettier --write '{{packages,__test__}/**/*.{js,less},*.js}'",
     "lint": "eslint --ext .js --ext .less src __test__"
-  },
-  "publishConfig": {
-    "registry": "http://registry.npmjs.org/"
   },
   "jest": {
     "testPathIgnorePatterns": [
@@ -27,11 +21,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
+    "babel-core": "^6.26.3",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
+    "chalk": "^2.3.2",
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.3",
     "eslint": "^3.18.0",
@@ -42,14 +36,13 @@
     "eslint-plugin-standard": "^2.0.1",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
+    "lerna": "^2.11.0",
     "prettier": "^1.11.1",
-    "react-dom": "^16.3.1",
-    "rimraf": "^2.6.2"
-  },
-  "dependencies": {
-    "immer": "^1.2.1",
-    "redux": "^3.7.2",
-    "redux-actions": "^2.3.0",
-    "wepy-redux": "^1.5.6"
+    "rimraf": "^2.6.2",
+    "shelljs": "^0.8.1",
+    "through2": "^2.0.3",
+    "uglify-js": "^3.3.18",
+    "umi-test": "^0.5.3",
+    "vinyl-fs": "^3.0.2"
   }
 }
