--- a/packages/weapp-maanshan/.gitignore
+++ b/packages/weapp-maanshan/.gitignore
@@ -13,7 +13,6 @@ lib
 .idea
 .DS_Store
 *.swp
-npm-debug.log*
 
 npm-debug.log
 yarn-error.log
@@ -26,3 +25,4 @@ coverage
 
 /examples/.wepycache
 /examples/.wepyignore
+.npmignore
