--- a/packages/connector-weapp/package.json
+++ b/packages/connector-weapp/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "weapp-maanshan",
+  "name": "weapp-weappx",
   "version": "0.1.0",
-  "description": "weapp to maanshan connector.",
+  "description": "weapp to weappx connector.",
   "main": "lib/index.js",
   "author": "bzone <yarnbCoder@gmail.com>",
   "license": "MIT"
