--- a/packages/wepy-weappx/package.json
+++ b/packages/wepy-weappx/package.json
@@ -1,11 +1,8 @@
 {
   "name": "wepy-weappx",
-  "version": "0.1.1",
+  "version": "0.1.6",
   "description": "wepy to weappx connector.",
   "main": "lib/index.js",
   "author": "bzone <yarnbCoder@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "wepy-redux": "^1.5.7"
-  }
+  "license": "MIT"
 }
