--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -17,10 +17,11 @@
   "author": "bzone <yarnbCoder@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "weappx": "^0.1.0",
+    "weappx-wepy": "^0.1.0",
     "wepy": "^1.6.0",
     "wepy-async-function": "^1.4.4",
-    "wepy-com-toast": "^1.0.2",
-    "wepyx": "^1.4.2"
+    "wepy-com-toast": "^1.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
