--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -43,6 +44,9 @@
     "through2": "^2.0.3",
     "uglify-js": "^3.3.18",
     "umi-test": "^0.5.3",
-    "vinyl-fs": "^3.0.2"
-  }
+    "vinyl-fs": "^3.0.2",
+    "webpack": "^3.9.1",
+    "webpack-merge": "^4.1.2"
+  },
+  "dependencies": {}
 }
