--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^2.0.1",
     "husky": "^0.14.3",
+    "inquirer": "^6.0.0",
     "jest": "^22.4.3",
     "lerna": "^2.11.0",
     "prettier": "^1.11.1",
