fix(weappx-weapp): 修复 hasChanged 判断错误(object 内容在页面加载时会进行一次深拷贝)

--- a/packages/weappx-weapp/package.json
+++ b/packages/weappx-weapp/package.json
@@ -4,5 +4,8 @@
   "description": "weappx to weapp connector.",
   "main": "lib/index.js",
   "author": "bzone <yarnbCoder@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lodash.isequal": "^4.5.0"
+  }
 }
